Adding external relation test #156

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -44,7 +44,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
     <li id="toggleeditstructure"><a href="javascript:toggleeditstructure()">Enable editing the selected structure</a></li>
     {% endif %}
     {% if configuration.allowdeclare %}
-    <li><a href="javascript:declare()">Add new Annotation Type</a></li>
+    <li id="addnewannotationtype"><a href="javascript:declare()">Add new Annotation Type</a></li>
     {% endif %}
     <li><a href="javascript:showhistory()">History &amp; Undo</a></li>
     <li><a href="javascript:openconsole()">Query Console</a></li>
