--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -116,14 +116,18 @@
                     {% endblock %}
                     <li><a href="{{base_prefix}}/">Document Index</a></li>
                     {% if loggedin %}
-                    <li>User: {{ username }}
+                    <li>User: {% if oidc %}{{ user.email }}{% else %}{{ username }}{% endif %}
                         <ul>
                             {% if isadmin %}
-                            <li><a href="{{base_prefix}}/admin/">Administation</a></li>
+                            <li><a href="{{base_prefix}}/admin/">Administration</a></li>
                             {% endif %}
                             <li><a href="https://flat.readthedocs.io/en/latest/user_guide.html">Documentation</a></li>
+                            {% if oidc %}
+                            <li><a href="{% url 'oidc_logout' %}">Log out</a></li>
+                            {% else %}
                             <li><a href="{{base_prefix}}/account/password_change/">Change password</a></li>
                             <li><a href="{{base_prefix}}/logout/">Log out</a></li>
+                            {% endif %}
                         </ul>
                     </li>
                     {% endif %}
