added switch configuration option to the user menu

--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -122,6 +122,7 @@
                             <li><a href="{{base_prefix}}/admin/">Administration</a></li>
                             {% endif %}
                             <li><a href="https://flat.readthedocs.io/en/latest/user_guide.html">Documentation</a></li>
+                            <li><a href="{{base_prefix}}/selectconf/">Switch configuration</a></li>
                             {% if oidc %}
                             <li><a href="{% url 'oidc_logout' %}">Log out</a></li>
                             {% else %}
