--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -123,12 +123,10 @@
                             {% endif %}
                             <li><a href="https://flat.readthedocs.io/en/latest/user_guide.html">Documentation</a></li>
                             <li><a href="{{base_prefix}}/selectconf/">Switch configuration</a></li>
-                            {% if oidc %}
-                            <li><a href="{% url 'oidc_logout' %}">Log out</a></li>
-                            {% else %}
+                            {% if not oidc %}
                             <li><a href="{{base_prefix}}/account/password_change/">Change password</a></li>
-                            <li><a href="{{base_prefix}}/logout/">Log out</a></li>
                             {% endif %}
+                            <li><a href="{{base_prefix}}/logout/">Log out</a></li>
                         </ul>
                     </li>
                     {% endif %}
